# EnsOrthoPOST

./: README.md  gene_family_ids.txt  pyproject.toml  species_list.txt
.github/workflows/: tests.yml
scripts/: run_pipeline.sbatch
src/ensorthopost/: __init__.py  build_corpus_files.py  extract_control_genes.py  extract_ortho_clusters.py  gene_metadata_report.py  generate_pipeline_stats.py  helper_define_species.py  main_orchestrator.py
tests/: test_extract_control_genes.py  test_helper_define_species.py  test_smoke.py
