[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensorthopost"
version = "0.1.0"
description = "Build multi-species ortholog training corpora from Ensembl Compara"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["requests", "biopython", "pandas"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
